--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,14 @@ h2{
   text-align: center;
 }
 
+h3{
+  text-align: center;
+  background-color: black;
+  color: aqua;
+  padding: 20px;
+  border-radius: 12px;
+}
+
 ul{text-align: center;
   background-color: black;
   color: aqua;
